--- a/Task6.html
+++ b/Task6.html
@@ -23,7 +23,7 @@
     
 
         // Modulus (Remainder)
-        document.writex (x % y);
+        document.write (x % y);
         document.write("<br>")
     
         </script>
